aws-create-vpc.tf
resource "aws_vpc" "lab03_vpc" {
  cidr_block           = "10.30.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "LAB03-VPC"
  }
}
