aws-vpc.tf
resource "aws_vpc" "b03_vpc" {
  cidr_block = "10.10.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "B03-VPC"
  }
}
